inline/tests/spec/snapshots/lexer/verbatim/escaped-verbatim.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'escaped-verbatim' from 'verbatim.yml'"
---
\`not verbatim\`
 `
^^ -> Plain @ (1:1)->(1:3)
  not
  ^^^ -> Plain @ (1:3)->(1:6)
      
     ^ -> Whitespace @ (1:6)->(1:7)
      verbatim
      ^^^^^^^^ -> Plain @ (1:7)->(1:15)
               `
              ^^ -> Plain @ (1:15)->(1:17)
                ⏎
                ^ -> Newline @ (1:17)->(2:1)

---
With input:

\`not verbatim\`


