inline/tests/spec/snapshots/lexer/verbatim/not-verbatim.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'not-verbatim' from 'markup/verbatim.yml'"
---
` not verbatim `
`
^ -> Plain @ (1:1)->(1:2)
  
 ^ -> Whitespace @ (1:2)->(1:3)
  not
  ^^^ -> Plain @ (1:3)->(1:6)
      
     ^ -> Whitespace @ (1:6)->(1:7)
      verbatim
      ^^^^^^^^ -> Plain @ (1:7)->(1:15)
               
              ^ -> Whitespace @ (1:15)->(1:16)
               `
               ^ -> Plain @ (1:16)->(1:17)
                ⏎
                ^ -> Newline @ (1:17)->(2:1)

---
With input:

` not verbatim `


