inline/tests/spec/snapshots/lexer/verbatim/simple-verbatim.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'simple-verbatim' from 'markup/verbatim.yml'"
---
`Verbatim`
`
^ -> Verbatim @ (1:1)->(1:2)
 Verbatim
 ^^^^^^^^ -> Plain @ (1:2)->(1:10)
         `
         ^ -> Verbatim @ (1:10)->(1:11)
          ⏎
          ^ -> Newline @ (1:11)->(2:1)

---
With input:

`Verbatim`


