inline/tests/spec/snapshots/lexer/verbatim/verbatim-not-verbatim.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'verbatim-not-verbatim' from 'verbatim.yml'"
---
`Verbatim` not verbatim.
`
^ -> Verbatim @ (1:1)->(1:2)
 Verbatim
 ^^^^^^^^ -> Plain @ (1:2)->(1:10)
         `
         ^ -> Verbatim @ (1:10)->(1:11)
           not verbatim.
          ^^^^^^^^^^^^^^ -> Plain @ (1:11)->(1:25)
                        ⏎
                        ^ -> Newline @ (1:25)->(2:1)

---
With input:

`Verbatim` not verbatim.


